src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_deep_fields.snap
---
source: src/passes/cst_gen.rs
expression: thing.field.2
---
Field(
    Field {
        lhs: Field(
            Field {
                lhs: Variable(
                    Variable {
                        variable: Ident(
                            "thing",
                        ),
                    },
                ),
                tok_dot: Dot,
                field: Named(
                    Ident(
                        "field",
                    ),
                ),
            },
        ),
        tok_dot: Dot,
        field: Unnamed(
            IntegerLiteral(
                2,
            ),
        ),
    },
)
