src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_greater_equal.snap
---
source: src/passes/cst_gen.rs
expression: a >= b
---
Binary(
    Binary {
        lhs: Variable(
            Variable {
                variable: Ident(
                    "a",
                ),
            },
        ),
        operation: GreaterEqual(
            GtEq,
        ),
        rhs: Variable(
            Variable {
                variable: Ident(
                    "b",
                ),
            },
        ),
    },
)
