src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_integer_literal.snap
---
source: src/passes/cst_gen.rs
expression: "123"
---
Literal(
    Integer(
        IntegerLiteral(
            IntegerLiteral(
                123,
            ),
        ),
    ),
)
