src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_parenthesis_value.snap
---
source: src/passes/cst_gen.rs
expression: (1)
---
Parenthesis(
    Parenthesis {
        tok_l_parenthesis: LParenthesis,
        expression: Literal(
            Integer(
                IntegerLiteral(
                    IntegerLiteral(
                        1,
                    ),
                ),
            ),
        ),
        tok_r_parenthesis: RParenthesis,
    },
)
