src/passes/snapshots/lumina2__passes__cst_gen__test__expression__expression_tuple_many_values.snap
---
source: src/passes/cst_gen.rs
expression: "(1,2,3)"
---
Tuple(
    Tuple {
        tok_l_parenthesis: LParenthesis,
        items: PunctuatedList {
            items: [
                Literal(
                    Integer(
                        IntegerLiteral(
                            IntegerLiteral(
                                1,
                            ),
                        ),
                    ),
                ),
                Literal(
                    Integer(
                        IntegerLiteral(
                            IntegerLiteral(
                                2,
                            ),
                        ),
                    ),
                ),
                Literal(
                    Integer(
                        IntegerLiteral(
                            IntegerLiteral(
                                3,
                            ),
                        ),
                    ),
                ),
            ],
            punctuation: [
                Comma,
                Comma,
            ],
        },
        tok_r_parenthesis: RParenthesis,
    },
)
